CSVのショット引数実装前

--- a/文化祭用STG.vcxproj
+++ b/文化祭用STG.vcxproj
@@ -197,6 +197,7 @@
     <ClInclude Include="Scene.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Boss.cpp" />
     <ClCompile Include="BulletManage.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Main.cpp" />
