--- a/文化祭用STG.vcxproj.filters
+++ b/文化祭用STG.vcxproj.filters
@@ -340,5 +340,8 @@
     <ClCompile Include="Move.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Boss.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
